# Mephisto

./: ._data  .coveragerc  .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierignore  .yarnrc.yml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile-frontend  LICENSE  MANIFEST.in  Makefile  README.md  blog.html  index.html  lerna.json  opensearch.xml  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  search-index.json  setup.py  sitemap.xml
.devcontainer/: devcontainer.json
.git-hooks/: README.md  pre-commit
.github/: dependabot.yml
.github/workflows/: annotated-pkgs.yml  annotated-pks.yml  cypress-e2e-tests  cypress-e2e-tests.yml  cypress-end-to-end-tests.yml  cypress-integration-tests.yml  deploy-docs.yml  docker-testing-matrix-manual-install.yml  docker-testing-matrix.yml  npm-check.yml  pre-commit.yml  python-test.yml  static_react_task.yml  test-deploy-docs.yml  version-sync.yml
.yarn/releases/: yarn-3.2.4.cjs
assets/css/: styles.1a0a97f9.css  styles.4986c2e7.css  styles.781f3545.css  styles.7bf3eba9.css  styles.88ac4db6.css  styles.9028df96.css  styles.c2b6d7a6.css  styles.f37ee071.css
assets/js/: 01a85c17.12ea47ea.js  01a85c17.17d71f3a.js  01a85c17.50a4c42b.js  01a85c17.732d3eaf.js  01a85c17.b90f331e.js  031793e1.6960e75b.js  04e58e9c.0024fedc.js  04e58e9c.02c8605b.js  04e58e9c.177b49a9.js  04e58e9c.1a0343ba.js  04e58e9c.2a4d02c1.js  04e58e9c.3d0bd8ec.js  04e58e9c.a3538379.js  04e58e9c.a8ea4f31.js  04e58e9c.aa6f58db.js  04e58e9c.c598de7f.js  04e58e9c.d86ee250.js  04e58e9c.dc153681.js  04e58e9c.f371032b.js  06c91ef7.0ad28309.js  06c91ef7.49b76e38.js  06c91ef7.5c4c6623.js  06c91ef7.614d23f1.js  06c91ef7.8687c011.js  06c91ef7.d387d609.js  06c91ef7.f349c255.js  06c91ef7.f8fa7b69.js  06ccfa9b.a3794a63.js  0ae14695.cff67a53.js  0cbab65e.32caed5f.js  0db8f33c.6a02cbd7.js  0db8f33c.aef0b742.js  1103.cfc99d4d.js  12241291.205aadda.js  12241291.5f071ee8.js  12241291.dc1d4424.js  12241291.fc931343.js  130db7a8.8f36b4f5.js  131.8951caf8.js  17896441.37daea65.js  (+654 more)
blog/: archive.html  atom.xml  index.html  mephisto-1.0.html  rss.xml  tags.html
blog/archive/: index.html
blog/first-blog-post/: index.html
blog/long-blog-post/: index.html
blog/mdx-blog-post/: index.html
blog/mephisto-1.0/: index.html
blog/tags/: index.html  releases.html
blog/welcome/: index.html
core/: utils.py
data/: README.md
data_model/: README.md  agent.py  assignment.py  constants.py  database.py  project.py  requester.py  task.py  worker.py
data_model/base/: assignment.py  constants.py  database.py  project.py  task.py  worker.py
data_model/local_backed/: constants.py
docker/: aws_credentials.example  docker-compose.dev.vscode.yml  docker-compose.dev.yml  docker-compose.local.yml  ssh_known_hosts
docker/dockerfiles/: Dockerfile.ubuntu-24.04
docker/entrypoints/: server.mturk.sh  server.prolific.sh
docker/envs/: env.dev
docs/: README.md  architecture_overview.md  common_qualification_flows.md  config_faq.md  development.md  docker.md  front_end_faqs.md  hydra_migration.md  quickstart.md
docs/explanations/: architect_api.html  architecture_overview.html
docs/guides/: quickstart.html
docs/legacy/: hydra_migration.md
docs/reference/: overview.html
docs/sb/: package.json
docs/storybook/: .gitignore  README.md  package-lock.json  package.json
docs/web/: README.md  babel.config.js  docusaurus.config.js  package-lock.json  package.json  sidebars.js  siteConfig.js
examples/: README.md
examples/acute_eval_demo/: README.md  example_script.py  static_test_script.py
examples/conditional_utility/: run_script.py  run_with_onboarding.py
examples/conditional_utility_react/: examine_results.py  run_task.py
examples/form_composer/: README.md  run_task.py
examples/form_composer_demo/: README.md  run_task.py  run_task__local__inhouse.py  run_task_dynamic.py  run_task_dynamic_ec2_mturk_sandbox.py  run_task_dynamic_ec2_prolific.py  run_task_dynamic_presigned_urls.py  run_task_dynamic_presigned_urls_ec2_prolific.py  run_task_with_gold_unit.py  run_task_with_onboarding.py  run_task_with_screening.py  run_task_with_worker_opinion.py
examples/mephisto_remote_query/: README.md  run_task.py
examples/multimodal_chat/: README.md  demo_worlds.py  run_task.py
examples/parlai_chat_task_demo/: README.md  __init__.py  demo_worlds.py  parlai_test_script.py  run_task.py  task_description.html
examples/parlai_qa_data_collection_demo/: README.md  demo_worlds.py  parlai_qa_test_script.py
examples/qa_data_collection/: demo_worlds.py  parlai_test_script.py
examples/react_auto_composing_forms/: README.md
examples/react_form_composer/: README.md
examples/remote_procedure/: README.md
examples/remote_query/: README.md
examples/simple_form_composer/: README.md
examples/simple_static_task/: README.md  data.csv  data_mturk.csv  data_prolific.csv  data_tutorial.csv  examine_results.py  run_task.py  run_task_ec2_mturk_sandbox.py  run_task_ec2_prolific.py  run_task_with_onboarding.py  static_run_with_onboarding.py  static_test_mturk_script.py  static_test_prolific_script.py  static_test_script.py
examples/static_react_task/: README.md  re-build.sh  run_task.py
examples/static_react_task_with_tips/: README.md  run_task.py
examples/static_react_task_with_worker_opinion/: README.md  run_task.py
hydra_plugins/: mephisto_path_plugin.py
inspiration/: convert_to_python_list.py  dedup.py  inspiration.txt
markdown-page/: index.html
mephisto/: README.md  VERSION  __init__.py
metrics/: README.md  install_linux.sh  install_mac.sh  install_metrics.sh  mephisto_default_dash.json  shutdown_metrics.py  view_metrics.py
python_api/: index.html
runs/: README.md
scripts/: README.md  check_npm_package_versions.py  sync_mephisto_task.py  sync_package_version.sh  update_copyright_headers.py  update_js_deps.sh
search/: index.html
test/: test_data_model.py  test_mephisto.py
test-project/: package.json
yarn-patches/: react-dev-utils.patch  react-refresh-webpack-plugin.patch
(+1803 files in other folders)
