[tool.poetry]
name = "mephisto"
version = "1.1.2"
description = "Crowdsourcing made simpler."
license = "MIT"
authors = [
    "Jack Urbanek <jju@fb.com>",
    "Pratik Ringshia <tikir@fb.com>"
]
readme = "README.md"
homepage = "https://mephisto.ai/"
repository = "https://github.com/facebookresearch/Mephisto"
documentation = "https://mephisto.ai/docs/reference/overview/"
keywords = ["crowdsourcing", "data", "collection", "review"]
classifiers = [
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Natural Language :: English",
]
packages = [
    { include = "mephisto" },
    { include = "hydra_plugins" },
]
include = [
    "README.md",
    "mephisto/__init__.py",
    "mephisto/scripts/metrics/install_metrics.sh",
    "mephisto/scripts/metrics/shutdown_metrics.py",
    "mephisto/scripts/metrics/view_metrics.py",
    "mephisto/scripts/metrics/README.md",
    "mephisto/scripts/metrics/resources/*",
    "hydra_configs/*",
]
exclude = [
    "**/__pycache__/**/*.*",
    "**/.mypy_cache/**/*",
    "**/node_modules/*",
    "**/node_modules/**/*",
    "**/build/*",
    "**/build/**/*",
    "**/_generated/*",
    "**/_generated/**/*",
    "mephisto/scripts/metrics/grafana/*",
    "mephisto/scripts/metrics/prometheus/*",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.22"
sh = "^1.12"
hydra-core = "^1.2.0"
tqdm = "^4.50.2"
websockets = "^10.1"
pyyaml = "^5.4.0"
markupsafe = "2.0.1"

# worker_addons
detoxify = { version = "^0.5.0", optional = true }

# aws
boto3 = { version = "^1.17", optional = false }
botocore = { version = "^1.20.95", optional = false }
xmltodict = { version = "^0.12.0", optional = false }

# cli
click = { version = "^7.0", optional = false }
click_default_group = { version = "^1.2", optional = false }
tabulate = { version = "^0.8.7", optional = false }
rich = { version = "^12.5.1", optional = false }
rich-click = { version = "^1.5.1", optional = false }

# metrics
prometheus-client = { version = "^0.13.1", optional = false }

# flask_architect
flask = { version = "^1.1", optional = false }
gevent-websocket = { version = "^0.10.1", optional = false }
werkzeug = { version = "^1.0.1", optional = false }

# mock_architect
tornado = { version = "^6.0", optional = false }

# parlai
parlai = { version = "^1.7.0", optional = true }
torch = { version = "^1.4.0", optional = true }

# jsonschema
jsonschema = { version = "^4.17.3", optional = false }

[tool.poetry.extras]
# Commented are currently non-optional
worker_addons = ["detoxify"]
# aws = ["boto3", "botocore", "xmltodict"]
# cli = ["click", "click_default_group", "tabulate", "rich", "rich-click"]
# metrics = ["prometheus-client"]
# flask_architect = ["flask", "gevent-websocket", "werkzeug"]
# mock_architect = ["tornado"]
parlai = ["parlai", "torch"]


[tool.poetry.group.dev.dependencies]
docutils = "^0.15"
mdutils = "^1.4.0"
pdoc = "^10.0.3"
pylint = "^2.4"
pytest = "^5.0"
pytest-cov = "^4.1.0"
mypy = "^0.971.0"


[tool.poetry.scripts]
'mephisto' = 'mephisto.client.cli:cli'


[tool.black]
line-length = 100


[build-system]
requires = [
    "poetry>=1.2.0",
    "poetry-core>=1.1.0",
    "wheel",
]
build-backend = "poetry.core.masonry.api"

[mypy]
ignore_missing_imports = true
